# Hivra-App

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release-gates.yml
adapters/hivra-ed25519-crypto/: Cargo.toml
adapters/hivra-ed25519-crypto/src/: lib.rs
adapters/hivra-nostr-crypto/: Cargo.toml
adapters/hivra-nostr-crypto/src/: lib.rs
adapters/hivra-transport/: Cargo.toml
core/hivra-core/: Cargo.toml
core/hivra-engine/: Cargo.toml
core/hivra-nostr-crypto/: Cargo.toml
core/hivra-transport/: Cargo.toml
docs/: README.md  android-keystore-migration.md  architecture-execution-discipline.md  architecture-v2-blueprint.md  capsule-addressing-model.md  development-control.md  hivra-conceptual-model.md  hivra-v3.2-conceptual-model.md  identity-decoupling-migration.md  product-axis.md  roadmap.md  specification.md
docs/architecture/: transport-delivery-lifecycle.md
docs/checklists/: ai-engineer-release-smoke.md  android-runtime-hardening.md  architecture-review.md  device-migration.md  manual-smoke.md  release-android.md  release-macos.md  release-manual-signoff-log.md  trading-drone-evidence-log.md  trading-drone-spec-runtime-parity.md  transport-health-policy.md  user-lifetime-safety-pack.md
docs/plugins/: bingx_futures_trading_drone_goal_contract_v1.md  bingx_futures_trading_drone_spec_v1.md  bingx_futures_trading_test_plugin.md  bingx_spot_trading_test_plugin.md  external_plugin_source.md  moltbook_agent_drone_design_v1.md  plugin_host_api_v1.md  temperature_tomorrow_liechtenstein_test_plugin.md
engine/hivra-engine/: Cargo.toml
flutter/: README.md  pubspec.yaml
flutter/android/: build_rust_android.sh
flutter/lib/: main.dart
flutter/macos/: copy_ffi.sh
flutter/test/: ai_capsule_inspection_service_test.dart  ai_developer_engineer_service_test.dart  ai_developer_remote_repository_cache_service_test.dart  backup_service_test.dart  (+90 more)
(+249 files in other folders)
