[package]
name = "hivra-ed25519-crypto"
version = "1.0.0"
edition = "2021"
description = "ed25519 CryptoProvider adapter for Hivra Engine"
license = "MIT"

[dependencies]
hivra-engine = { path = "../../engine/hivra-engine" }
ed25519-dalek = { version = "2", default-features = false, features = ["std"] }

[features]
default = ["std"]
std = []
