[package]
name = "hivra-nostr-crypto"
version = "1.0.0"
edition = "2021"
description = "Nostr secp256k1 CryptoProvider adapter for Hivra Engine"
license = "MIT"

[dependencies]
hivra-engine = { path = "../../engine/hivra-engine" }
secp256k1 = { version = "0.29", features = ["std", "rand", "serde"] }

[features]
default = ["std"]
std = []
